This file list changes done in each version of the CheckSum Tool.

CheckSum Tool 0.4.0
  Add Select All to Edit-menu (also CTRL+A shortcut key)
  Add Copy -item to Edit-menu (copies checksums to clipboard)

CheckSum Tool 0.3.0 - 2008-01-07 (r107)
  Manual: Add initial version of user manual (in html format)
  Add manual item to Help-menu
  Rename About-menu to Help-menu
  Try to detemine file's type from filename when opening checksum file
  Add titles to Open- and Save As-dialogs
  Make verified status three-state (not verified, verified OK and verify failed)
  Installer: Exit install if required DotNet version is not found
  Installer: Install user manual
  Update copyright year to contain 2008 in About-dialog and in documents
  Disable Save-button in toolbar and Save-item in File-menu when list has no changes
  Add Checksum types to CheckSums-menu
  Add star to program title when filelist is changed
  Bugfix: Don't add space to installer executable filename
  Bugfix: Run installer task from correct place when doing distribution
  Bugfix: Sometimes all files in list were not saved to checksum file
  Bugfix: Reset filename after changing checksum type (don't overwrite file)

CheckSum Tool 0.2.0 - 2007-12-18 (r57)
  Added current filename to program title
  Keep track of current filename, ask filename only if not previously selected
  Add menuitems for creating new file and saving file with new filename (save As)
  Added unit tests for SHA1-, MD5- and CRC32- calculation and verification
  Improved NAnt build file by reorganizing targets
  Added NAnt "distribution" target for building a distribution from SVN
  Bugfix: CRC32 sum was not calculated or verified correctly (found by unit tests)

CheckSum Tool 0.1.0 - 2007-12-04 (r37)
  First version added to the SourceForge.net
  Support for CRC32, MD5 and SHA-1 checksum types
  Can save list of checksums to file (simple CSV file)
  Can load a list of checksum from file (simple CSV file)